<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="horizontal"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/nav_iv_user_dp_id"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/icon_picture" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@id/nav_iv_user_dp_id"
        android:layout_marginStart="@dimen/marginplus1"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/nav_iv_user_dp_id"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nav_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/user_name"
            android:textSize="@dimen/_12sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/nav_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="12sp"
            android:text="@string/email"
            android:textColor="#fff" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>